# mtrx-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
src/matrix_signal_adapter/: __init__.py  cli.py  command_handler.py  jsonrpc_server.py  matrix_backend.py
src/mtrx_cli/: __init__.py  cli.py  command_handler.py  jsonrpc_server.py  matrix_backend.py  utils.py
