[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mtrx-cli"
version = "0.2.0"
description = "A drop-in signal-cli replacement backed by Matrix Chat"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "mtrx-cli contributors" }]
keywords = ["signal", "matrix", "cli", "adapter", "wrapper"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Topic :: Communications :: Chat",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = ["matrix-nio>=0.25.2", "aiohttp>=3.13.5", "aiofiles>=24.1.0"]

[project.optional-dependencies]
e2ee = ["matrix-nio[e2e]>=0.25.2"]
dev = ["pytest", "pytest-asyncio", "ruff"]

[project.scripts]
mtrx-cli = "mtrx_cli.cli:main"
# Optional: install as 'signal-cli' alias
# signal-cli = "mtrx_cli.cli:main"

[project.urls]
Homepage = "https://github.com/horlabs/matrix-cli"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["mtrx_cli*"]

[tool.ruff]
line-length = 100
target-version = "py310"
